--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
       header h1 {
         font-size: 3rem;
         font-family: 'Great Vibes', cursive;
+        color:#b36f79;
       }
 
       nav {
