--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       header h1 {
         font-size: 3rem;
         font-family: 'Great Vibes', cursive;
-        color:#b36f79;
+        color: #442d2d;
       }
 
       nav {
