Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       header h1 {
         font-size: 3rem;
         font-family: 'Great Vibes', cursive;
-        color: white;
+        color: #ffffff;
       }
 
       nav {
